[metadata]
name = keyrings-chainguard-libraries
version = 0.1.1
author = Ajay Kemparaj
author_email = ajay.kemparaj@chainguard.dev
description = Chainctl keyring backend for Python package authentication
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chainguard-dev/keyrings-chainguard-libraries
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging

[options]
packages = find:
python_requires = >= 3.9
install_requires =
    keyring >= 15.1
    pluggy >= 0.12.0

[options.packages.find]
include = keyrings*, chainctl_auth_tox*

[options.entry_points]
keyring.backends =
    chainctl = keyrings.chainctl_auth:ChainctlAuth
tox =
    chainctl_bootstrap = chainctl_auth_tox.bootstrap:plugin

[options.extras_require]
testing =
    pytest >= 6.0
    pytest-cov
    pytest-mock
    pytest-timeout
dev =
    %(testing)s
    black
    flake8
    mypy
    build
    ruff
    twine
